# mparse

./: CHANGELOG.md  LICENSE  mparse.cabal
src/Mparse/: DotEnv.hs  Format.hs  Parser.hs
test/: DotEnvSpec.hs  FormatSpec.hs  LibSpec.hs  ParserSpec.hs  test.env
