cabal-version:   3.0
name:            mparse
version:         0.1.1.0
license:         MIT
license-file:    LICENSE
author:          Michael Miller
maintainer:      mikeaamiller117@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Mparse.DotEnv
        Mparse.Format
        Mparse.Parser

    build-depends:
        , base        ^>=4.21.0.0
        , containers

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite mparse-test
    import:             warnings
    default-language:   Haskell2010
    other-modules:
        DotEnvSpec
        FormatSpec
        LibSpec
        ParserSpec

    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:
        , base            ^>=4.21.0.0
        , hspec
        , hspec-discover
        , mparse
        , raw-strings-qq

    ghc-options:        -O -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends: hspec-discover:hspec-discover
